--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
-    "jsdoc-to-markdown": "^3.0.4",
+    "jsdoc-to-markdown": "^3.1.0-1",
     "test-runner": "^0.5.0-1"
   },
   "dependencies": {
